# zdict

./: .gitignore  CMakeLists.txt  README.md  zdict.pri  zdictcontroller.cpp  zdictcontroller.h
internal/: zdictcompress.cpp  zdictcompress.h  zdictconversions.cpp  zdictconversions.h  zdictionary.cpp  zdictionary.h  zstardictdictionary.cpp  zstardictdictionary.h
